# Exam-Project-CMEPDA

./: README.md  contributing.rst  pyproject.toml
.github/: lamine.yml
docs/: documentation.rst
src/: __init__.py  compitino1.py  compitino2.py  lezione.py
